@@ -8,13 +8,10 @@ import com.dewarim.cinnamon.model.relations.RelationType;
 import com.dewarim.cinnamon.model.request.relation.CreateRelationRequest;
 import com.dewarim.cinnamon.model.request.relation.DeleteRelationRequest;
 import com.dewarim.cinnamon.model.request.relation.SearchRelationRequest;
-import com.dewarim.cinnamon.model.response.RelationWrapper;
 import com.dewarim.cinnamon.test.TestObjectHolder;
-import org.apache.http.HttpResponse;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static com.dewarim.cinnamon.DefaultPermission.*;
@@ -24,21 +21,15 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
 
     @Test
     public void unhappyRequestWithoutParameters() throws IOException {
-        SearchRelationRequest request  = new SearchRelationRequest();
-        HttpResponse          response = sendStandardRequest(UrlMapping.RELATION__SEARCH, request);
-        assertCinnamonError(response, ErrorCode.INVALID_REQUEST);
+        SearchRelationRequest request = new SearchRelationRequest();
+        sendStandardRequestAndAssertError(UrlMapping.RELATION__SEARCH, request, ErrorCode.INVALID_REQUEST);
     }
 
     @Test
     public void getRelationsByTypeId() throws IOException {
-        SearchRelationRequest request = new SearchRelationRequest();
-        request.setRelationTypeIds(Collections.singletonList(1L));
-        HttpResponse    response = sendStandardRequest(UrlMapping.RELATION__SEARCH, request);
-        RelationWrapper wrapper  = parseResponse(response);
-        Relation        relation = wrapper.getRelations().get(0);
-        Long            typeId   = relation.getTypeId();
-        assertNotNull(typeId);
-        assertEquals(1L, (long) typeId);
+        Relation relation = client.searchRelations(List.of(), List.of(), List.of(1L), false, false).get(0);
+        assertNotNull(relation.getTypeId());
+        assertEquals(1L, (long) relation.getTypeId());
 
         // also check: no metadata if not requested
         assertNull(relation.getMetadata());
@@ -122,22 +113,19 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
     @Test
     public void createRelationWithInvalidRequest() throws IOException {
         CreateRelationRequest createRequest = new CreateRelationRequest(0L, 0L, null, null);
-        HttpResponse          response      = sendStandardRequest(UrlMapping.RELATION__CREATE, createRequest);
-        assertCinnamonError(response, ErrorCode.INVALID_REQUEST);
+        sendStandardRequestAndAssertError(UrlMapping.RELATION__CREATE, createRequest, ErrorCode.INVALID_REQUEST);
     }
 
     @Test
     public void createRelationWithUnknownRelationType() throws IOException {
         CreateRelationRequest createRequest = new CreateRelationRequest(1L, 1L, Long.MAX_VALUE, "<meta/>");
-        HttpResponse          response      = sendStandardRequest(UrlMapping.RELATION__CREATE, createRequest);
-        assertCinnamonError(response, ErrorCode.RELATION_TYPE_NOT_FOUND);
+        sendStandardRequestAndAssertError(UrlMapping.RELATION__CREATE, createRequest, ErrorCode.RELATION_TYPE_NOT_FOUND);
     }
 
     @Test
     public void deleteRelationWithInvalidRequest() throws IOException {
         DeleteRelationRequest deleteRequest = new DeleteRelationRequest((Long) null);
-        HttpResponse          response      = sendStandardRequest(UrlMapping.RELATION__DELETE, deleteRequest);
-        assertCinnamonError(response, ErrorCode.INVALID_REQUEST);
+        sendStandardRequestAndAssertError(UrlMapping.RELATION__DELETE, deleteRequest, ErrorCode.INVALID_REQUEST);
     }
 
     @Test
@@ -157,15 +145,10 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
         var createdRelation = client.createRelation(leftOsd.getId(), rightOsd.getId(), 1L, "<meta>m</meta>");
 
         // verify relation exists:
-        SearchRelationRequest request = new SearchRelationRequest();
-        request.setLeftIds(Collections.singletonList(leftOsd.getId()));
-        request.setRightIds(Collections.singletonList(rightOsd.getId()));
-        request.setIncludeMetadata(true);
-        request.setRelationTypeIds(Collections.singletonList(1L));
-        HttpResponse    response = sendStandardRequest(UrlMapping.RELATION__SEARCH, request);
-        RelationWrapper wrapper  = parseResponse(response);
-        Relation        relation = wrapper.getRelations().get(0);
-        Long            typeId   = relation.getTypeId();
+
+        List<Relation> relations = client.searchRelations(List.of(leftOsd.getId()), List.of(rightOsd.getId()), List.of(1L), true, false);
+        Relation       relation  = relations.get(0);
+        Long           typeId    = relation.getTypeId();
         assertNotNull(typeId);
         assertEquals(1L, (long) typeId);
         Long leftId = relation.getLeftId();
@@ -178,14 +161,12 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
         assertEquals(meta, "<meta>m</meta>");
 
         // delete
-        DeleteRelationRequest deleteRequest  = new DeleteRelationRequest(relation.getId());
-        HttpResponse          deleteResponse = sendStandardRequest(UrlMapping.RELATION__DELETE, deleteRequest);
-        assertResponseOkay(deleteResponse);
+        client.deleteRelation(relation.getId());
     }
 
     @Test
     public void createRelationFailsWithoutChildAddPermission() throws IOException {
-        var toh = prepareAclGroupWithPermissions("createRelationFailsWithoutChildAddPermission", List.of(READ_OBJECT_SYS_METADATA));
+        var toh      = prepareAclGroupWithPermissions("createRelationFailsWithoutChildAddPermission", List.of(READ_OBJECT_SYS_METADATA));
         var leftOsd  = toh.createOsd("left-osd").osd;
         var rightOsd = toh.createOsd("right-osd").osd;
 
@@ -227,24 +208,13 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
 
     @Test
     public void createRelationFailsWithoutParentAddPermission() throws IOException {
-        var toh = prepareAclGroupWithPermissions("createRelationFailsWithoutParentAddPermission", List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD));
+        var toh      = prepareAclGroupWithPermissions("createRelationFailsWithoutParentAddPermission", List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD));
         var leftOsd  = toh.createOsd("left-osd").osd;
         var rightOsd = toh.createOsd("right-osd").osd;
 
         // create
         var ex = assertThrows(CinnamonClientException.class, () -> client.createRelation(leftOsd.getId(), rightOsd.getId(), 1L, "<meta>m</meta>"));
         assertEquals(ex.getErrorCode(), ErrorCode.NO_RELATION_PARENT_ADD_PERMISSION);
-    }
-
-    /**
-     * use client instead
-     */
-    @Deprecated()
-    private RelationWrapper parseResponse(HttpResponse response) throws IOException {
-        assertResponseOkay(response);
-        RelationWrapper wrapper = mapper.readValue(response.getEntity().getContent(), RelationWrapper.class);
-        assertNotNull(wrapper);
-        return wrapper;
     }
 
     @Test
@@ -257,18 +227,18 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
 
         var relationType1 = adminClient.createRelationType(new RelationType("or-mode-test-1", false, false, false, false, false, false));
         var relationType2 = adminClient.createRelationType(new RelationType("or-mode-test-2", false, false, false, false, false, false));
-        var relation1    = client.createRelation(left1.getId(), right1.getId(), relationType1.getId(), "<meta/>");
-        var relation2    = client.createRelation(left2.getId(), right2.getId(), relationType2.getId(), "<meta/>");
+        var relation1     = client.createRelation(left1.getId(), right1.getId(), relationType1.getId(), "<meta/>");
+        var relation2     = client.createRelation(left2.getId(), right2.getId(), relationType2.getId(), "<meta/>");
 
         // should find relation1 based on leftId + relation2 based on rightId
         List<Relation> searchResult = client.searchRelations(List.of(left1.getId()), List.of(right2.getId()), null, true, true);
-        assertEquals(2,searchResult.size());
+        assertEquals(2, searchResult.size());
         assertTrue(searchResult.contains(relation1));
         assertTrue(searchResult.contains(relation2));
 
         // should find relation1 based on leftId + relation2 based on typeId
         List<Relation> searchResult2 = client.searchRelations(List.of(left1.getId()), null, List.of(relationType2.getId()), true, true);
-        assertEquals(2,searchResult2.size());
+        assertEquals(2, searchResult2.size());
         assertTrue(searchResult2.contains(relation1));
         assertTrue(searchResult2.contains(relation2));
     }
